--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.9.0",
     "gitignore": "^0.7.0",
     "react": "^19.1.0",
@@ -15,6 +16,7 @@
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "redux-saga": "^1.3.0",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
